# libftdi

./: .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  CMakeOptions.txt  ChangeLog  LICENSE  README
doc/: CMakeLists.txt
examples/: CMakeLists.txt  async.c
examples/cmake_example/: CMakeLists.txt
ftdi_eeprom/: CMakeLists.txt  main.c
ftdipp/: CMakeLists.txt  ftdi.cpp  ftdi.hpp
python/: CMakeLists.txt  ftdi1.i
python/examples/: CMakeLists.txt
src/: CMakeLists.txt  ftdi.c  ftdi.h  ftdi_i.h
test/: CMakeLists.txt
